rewrote webview using .ts

--- a/control.ipynb
+++ b/control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,30 +22,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files collected from . to ./module\n"
+      "Files collected from . to ./flatten_module\n"
      ]
     }
    ],
    "source": [
     "collect_files(\n",
     "    '.',\n",
-    "    './module',\n",
-    "    includes=['src/'],\n",
+    "    './flatten_module',\n",
+    "    includes=['src/', 'webview', 'webview-src'],\n",
     "    excludes=[\n",
     "        '__pycache__',\n",
     "        'egg-info',\n",
     "        'git',\n",
     "        'css',\n",
-    "        'json',\n",
     "        'png',\n",
-    "        'js',\n",
     "        '.yarnrc',\n",
     "        'dist',\n",
     "        'compare/',\n",
