--- a/control.ipynb
+++ b/control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
     "collect_files(\n",
     "    '.',\n",
     "    './flatten_module',\n",
-    "    includes=['src/', 'webview', 'webview-src'],\n",
+    "    includes=['src/', 'webview', 'webview-src', 'package.json'],\n",
     "    excludes=[\n",
     "        '__pycache__',\n",
     "        'egg-info',\n",
